--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
             margin: 0;
             height: 100vh;
 
-            /* Background image */
-            background-image: url("photo.jpg"); /* change this */
+            /* PNG background */
+            background-image: url("background.png"); /* <-- PNG file */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
 
-            /* Center text */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -26,7 +25,7 @@
             font-size: 120px;
             font-weight: bold;
             color: white;
-            text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.7);
+            text-shadow: 4px 4px 12px rgba(0, 0, 0, 0.8);
         }
     </style>
 </head>
