--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <title>Hasbi</title>
     <style>
-        body {
+        html, body {
             margin: 0;
-            height: 100vh;
+            width: 100%;
+            height: 100%;
+        }
 
-            /* PNG background */
-            background-image: url("background.png"); /* <-- PNG file */
-            background-size: cover;
+        body {
+            background-image: url("background.png"); /* your PNG file */
+            background-size: cover;      /* fit to screen */
             background-position: center;
             background-repeat: no-repeat;
 
